styles/main.css
@font-face {
  font-family: ZCoolQingKe;
  src: url("../assets/fonts/ZCOOLQingKeHuangYou-Regular.ttf");
}

@font-face {
  font-family: WorkSans;
  src: url("../assets/fonts/WorkSans-Regular.ttf");
}

body {
  background-image: url("../assets/background.png");
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-position: center center;
  background-size: cover;
  background-color: #6e4636;
  height: 100%;
  width: 100%;
}

.game-box {
  position: relative;
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: left;
}

.doll-box {
  position: relative;
  width: 45%;
  display: flex;
  justify-content: center;
  margin-left: 5%;
}

.doll-layer {
  height: 700px;
}

.item-box {
  position: relative;
  top: 80px;
  margin-right: 19%;
  /* width: 31%; */
}

.item-box-inner {
  border-top: 20px solid #5b352b;
}

.game-title {
  color: white;
  font-family: ZCoolQingKe;
  font-size: 30px;
  text-align: right;
  margin-right: 10px;
  text-shadow: 2px 2px rgba(0, 0, 0, 0.473);
}

#items-pages {
  overflow-y: auto;
  height: 545.4px;
  width: 400px;
  background-color: #fee2ca;
  border: 7px solid #5b352b;
  border-radius: 0px 0px 15px 0px !important;
}

.item-btn {
  cursor: pointer;
  border: 3px solid #d1a480;
  border-radius: 25px;
  margin: 5px 5px 5px 5px;
  /* box-shadow: 0 3px 5px #d1a48075; */
}

.item-btn:hover {
  transform: scale(1.02);
  transition-duration: 0.3;
}

.outfit-btn {
  cursor: pointer;
  border: 3px solid #d1a480;
  border-radius: 15px;
  margin: 5px 5px 5px 5px;
  /* box-shadow: 0 3px 5px #d1a48075; */
}

.outfit-btn:hover {
  transform: scale(1.02);
  transition-duration: 0.3;
}

.selected-item {
  border: 3px solid #5b352b;
}

.not-selected {
  visibility: hidden;
}

.accordion-item {
  border-radius: 10px 10px 10px 10px !important;
  background-color: #d1a48080 !important;
  width: 100%;
  border: none;
  margin-bottom: 10px;
}

.accordion
  > .accordion-item:nth-child(even)
  > .accordion-header
  > .accordion-button {
  background-color: #5b352b !important;
}

.accordion-button {
  border-radius: 10px 10px 10px 10px !important;
  background-color: #ac7e59 !important;
  color: white !important;
  font-family: ZCoolQingKe;
  font-size: 20px;
  box-shadow: none;
}

.accordion-button:not(.collapsed) {
  border-radius: 10px 10px 0px 0px !important;
  box-shadow: none;
}

.accordion-button::after {
  background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ffffff'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/></svg>") !important;
}

.accordion-button:focus {
  box-shadow: none !important;
}

.accordion-body {
  padding: 5px;
}

.nav-link {
  background-color: #ac7e59;
  color: white;
  border-radius: 15px 0px 0px 15px !important;
  border: 5px outset #06030275 !important;
}

.nav-link.active {
  background-color: #913625 !important;
  border: 5px solid rgba(255, 255, 255, 0.703) !important;
}

.nav-link-even {
  background-color: #5b352b !important;
}

.tab-icon {
  width: 35px;
}

.tab-header {
  background-color: #ac7e59;
  color: white;
  font-family: ZCoolQingKe;
  font-size: 20px;
  border-radius: 15px;
  padding-left: 20px;
  margin-bottom: 10px;
}

.setting-row {
  width: 100%;
  font-size: 20px;
  font-family: ZCoolQingKe;
  color: #5b352b;
  background-color: #d1a48080 !important;
  padding: 10px;
  border-radius: 10px;
}

.form-check-label {
  margin-left: 10px;
  margin-top: 2.5px;
}

.form-check-input[type="checkbox"] {
  cursor: pointer;
  width: 35px;
  height: 35px;
  border-radius: 10px !important;
  box-shadow: none;
  border: 3px solid #ac7e59;
  margin: 0px;
}

.form-check-input:checked {
  background-color: #5b352b;
}

.tail-btn-row {
  display: flex;
  width: 100%;
  justify-content: center;
}

.tail-button {
  width: 32%;
  background-color: #6e4636;
  border: none;
  box-shadow: none;
  margin: 0px 5px 5px 0px;
}

.tail-button:hover {
  background-color: #5c3628;
}

.tail-button:disabled {
  background-color: #5c3628;
}

#about-game-button {
  font-family: ZCoolQingKe;
  width: 100%;
  background-color: #5b352b;
  border: none;
  box-shadow: none;
  color: white;
  margin-top: 150px;
}

#about-game-button:hover {
  background-color: #482820;
}

/*--------------About game modal------------------------*/

.modal-content {
  background-color: #fee2ca !important;
}

.modal-footer {
  border: none;
  padding: 0 !important;
}

.modal-title {
  font-family: ZCoolQingKe;
  width: 100%;
  background-color: #5b352b;
  border-radius: 25px;
  color: white;
  padding: 5px;
  font-size: 20px;
  text-align: center;
}

.about-game-body {
  padding: 10px;
  text-align: justify;
  text-justify: inter-word;
  font-family: WorkSans;
}

.credits-body {
  font-family: WorkSans;
  padding: 10px 0px 10px 0px;
}

.close-modal-btn {
  font-family: ZCoolQingKe;
  color: white;
  background-color: #6e4636;
}

.close-modal-btn:hover {
  background-color: #5c3628;
}

.credits-title {
  background-color: white;
  color: #6e4636;
}

a {
  text-decoration: none;
  color: #6e4636;
}

/*--------------BG STUFF---------------*/
.doll-stand {
  position: absolute;
  z-index: -999;
}

/*-------------------------Custom Scrollbar----------------------------*/
/* width */
::-webkit-scrollbar {
  width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
  background: #fee2ca;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #ac7e59;
  border-radius: 5px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #9d714d;
  cursor: pointer;
}

/*----------------------------------RESPONSIVE STUFF------------------------------*/

@media only screen and (min-width: 820px) and (max-width: 1036px) {
  #items-pages {
    width: 290px;
  }
}

@media only screen and (max-width: 820px) {
  body {
    background-image: url("../assets/mobile-bg-2.png");
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-position: center center;
    background-size: cover;
    background-color: #6e4636;
  }

  .item-btn {
    width: 45%;
    max-width: 100px;
  }

  .game-box {
    display: block;
    height: 100%;
  }

  .item-box {
    top: 20px;
    width: 100%;
  }

  #items-pages {
    width: 100% !important;
  }

  .doll-box {
    width: 100%;
    margin-left: 0;
  }

  .doll-layer {
    height: 500px;
  }

  .doll-stand {
    height: 510px;
    width: 400px;
  }

  .layer0 {
    position: static !important;
  }
}

@media only screen and (min-height: 820px) and (min-width: 810px) {
  body {
    background-image: url("../assets/mobile-bg-2.png");
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-position: center center;
    background-size: cover;
    background-color: #6e4636;
  }
}

